src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    scroll-behavior: smooth;
    scroll-padding-top: 8rem;
  }
  body::-webkit-scrollbar {
    display: none;
  }
}

@layer utilities {
  .clip-tag {
    -webkit-clip-path: polygon(75% 0, 100% 50%, 75% 100%, 0 100%, 0 0);
    clip-path: polygon(75% 0, 100% 50%, 75% 100%, 0 100%, 0 0);
  }
  .clip-circle {
    -webkit-clip-path: circle(50% at 50% 50%);
    clip-path: circle(50% at 50% 50%);
  }
  .delay-0 {
    animation-delay: 0s;
  }
  .delay-10 {
    animation-delay: 350ms;
  }
  .delay-20 {
    animation-delay: 500ms;
  }
  .delay-30 {
    animation-delay: 700ms;
  }
  .delay-40 {
    animation-delay: 1000ms;
  }
}

